k8s/overlays/net/execodex-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: execodex-fe
  namespace: execodex
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
    nginx.org/client-max-body-size: "300m"
spec:
  parentRefs:
  - name: global-gateway
    namespace: gateway-namespace
  hostnames:
  - "iaka.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: execodex-fe
      port: 80
